<resources>
    <string name="app_name">Todoly</string>
    <string name="view">View</string>
    <string name="task">Task</string>
    <string name="back">Back</string>
    <string name="todo">TODO</string>
    <string name="to_doly">TO-DOLY</string>
    <string name="pomodoro">POMODORO</string>
    <string name="outer_border_calendar">Outer border of the calendar</string>
    <string name="inner_border_calendar">Inner border of calendar</string>
    <string name="month_title_box">Month Title box area</string>
    <string name="right_month_button">Right next month button</string>
    <string name="left_month_button">Left next month button</string>
    <string name="new_task">NEW TASK</string>
    <string name="you_have_no_tasks">YOU HAVE NO TASKS</string>
    <string name="takes_you_to_calendar_page">takes you to calendar page</string>
    <string name="week">Week</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="backmonth"><![CDATA[<]]></string>
    <string name="forwardmonth"><![CDATA[>]]></string>
    <string name="sunday">SUN</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THUR</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="timer">Timer</string>
    <string name="start_timer">Start Timer</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="reset">reset</string>
    <string name="str_timer_start">start</string>
    <string name="str_increment_timer">timer</string>
    <string name="working">working</string>
    <string name="stopped">stopped</string>
</resources>