<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#424242"
    android:backgroundTint="@color/brown">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="34dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="375dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="387dp" />

    <!-- Back Button-->
    <Button
        android:id="@+id/back_button"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/brown_gold_button"
        android:fontFamily="@font/manrope_regular"
        android:text="@string/back"
        android:textAlignment="center"
        android:textSize="25sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Task Button -->
    <Button
        android:id="@+id/task_button"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_marginStart="224dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/brown_gold_button"
        android:fontFamily="@font/manrope_regular"
        android:text="@string/task"
        android:textAlignment="center"
        android:textSize="25sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <!-- TO-DOLY Title-->
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/assistant_extralight"
        android:text="@string/to_doly"
        android:textColor="@color/turquoise"
        android:textSize="65sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041" />

    <!-- Orange Title Line-->
    <ImageView
        android:id="@+id/divider"
        android:layout_width="363dp"
        android:layout_height="21dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/orange_title_line" />

<!--     Calendar Design   -->
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="378dp"
        android:layout_height="462dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.605"
        app:srcCompat="@drawable/calendar_bg"
        android:contentDescription="@string/outer_border_calendar"/>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="343dp"
        android:layout_height="344dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.653"
        app:srcCompat="@drawable/brown_inner_box"
        android:contentDescription="@string/inner_border_calendar" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="341dp"
        android:layout_height="58dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.263"
        app:srcCompat="@drawable/month_title_box"
        android:contentDescription="@string/month_title_box" />

    <!--  Right Button  -->
    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="69dp"
        android:layout_height="58dp"
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.903"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.261"
        app:srcCompat="@drawable/next_month_button"
        android:contentDescription="@string/right_month_button" />


    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="69dp"
        android:layout_height="58dp"
        android:backgroundTint="#00FFFFFF"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.261"
        app:srcCompat="@drawable/next_month_button"
        android:contentDescription="@string/left_month_button" />


</androidx.constraintlayout.widget.ConstraintLayout>