<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity_pomodoro"
    android:background="@color/brown">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp">

        <!-- TodoLy title -->
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/assistant_extralight"
            android:text="@string/to_doly"
            android:textColor="@color/turquoise"
            android:textSize="65sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <!-- Orange Title Line-->
        <ImageView
            android:id="@+id/divider"
            android:layout_width="310dp"
            android:layout_height="21dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:srcCompat="@drawable/orange_title_line" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/brown">

        <!-- Reset Button -->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/brown_gold_button"
            android:onClick="resetTapped"
            android:text="RESET"
            android:textColor="@color/gold"
            android:textSize="30sp" />

        <!-- Timer Text -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="TIMER"
            android:textColor="@color/lightpink"
            android:textSize="30sp" />

        <!-- Start/Stop Button -->
        <Button
            android:id="@+id/startStopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="15dp"
            android:background="@drawable/brown_gold_button"
            android:onClick="startStopTapped"
            android:text="START"
            android:textColor="@color/turquoise"
            android:textSize="30sp" />

    </androidx.appcompat.widget.Toolbar>

    <!-- Timer -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timerText"
        android:textSize="60sp"
        android:text="00 : 30 : 00"
        android:textColor="@color/gold"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="309dp">

        <!--    Back button -->
        <Button
            android:id="@+id/backbtn"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="80dp"
            android:background="@drawable/brown_gold_button"
            android:fontFamily="@font/manrope_regular"
            android:text="@string/back"
            android:textAlignment="center"
            android:textSize="25sp"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>