<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#424242"
    android:visibility="visible">


    <!-- divider -->

    <!--New task button -->

    <Button
        android:id="@+id/pomodoroBtn"
        style="@style/Widget.Design.FloatingActionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/creambutton"
        android:fontFamily="@font/manrope_regular"
        android:letterSpacing="0.34"
        android:text="@string/pomodoro"
        android:textAlignment="center"
        android:textAppearance="@style/you_have_no_tasks"
        android:textColor="@color/grey"
        android:textColorLink="@color/light_salmon"
        android:textSize="24sp"
        app:backgroundTint='@null'
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="#00FFFFFF" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:editable="false"
        android:fontFamily="@font/assistant_extralight"
        android:text="@string/to_doly"
        android:textColor="@color/gold"
        android:textSize="65sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- You have no task-->

    <Button
        android:id="@+id/newtaskbutton"
        style="@style/Widget.Design.FloatingActionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/greenbutton"
        android:fontFamily="@font/manrope_regular"
        android:letterSpacing="0.34"
        android:text="NEW TASK"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="24sp"
        app:iconTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:rippleColor="#00FFFFFF" />

    <View
        android:id="@+id/viewport"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="25dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/dayviewbackground"
        app:layout_constraintBottom_toTopOf="@+id/pomodoroBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newtaskbutton"
        app:layout_constraintVertical_bias="0.69">


    </View>



    <!--<TextView
        android:id="@+id/no_task"
        android:layout_width="296dp"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:editable="false"
        android:gravity="center_horizontal|top"
        android:text="@string/you_have_no_tasks"
        android:textAppearance="@style/you_have_no_tasks"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/viewport"
        app:layout_constraintEnd_toStartOf="@+id/viewport"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/viewport"
        app:layout_constraintTop_toBottomOf="@+id/viewport" />
        -->

    <TextView
        android:id="@+id/today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="11dp"
        android:editable="false"
        android:fontFamily="@font/manrope_regular"
        android:gravity="center_horizontal|top"
        android:text="TODAY"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="36sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/viewport"
        app:layout_constraintTop_toTopOf="@+id/viewport" />

    <ImageButton
        android:id="@+id/calendar_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="8dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:backgroundTint="@color/grey"
        android:contentDescription="@string/takes_you_to_calendar_page"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/divider3"
        app:layout_constraintEnd_toEndOf="@+id/viewport"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@+id/viewport"
        app:layout_constraintTop_toTopOf="@+id/viewport"
        app:srcCompat="@drawable/calendar_button" />

    <View
        android:id="@+id/divider3"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/creambutton"
        android:backgroundTint="@color/grey"
        app:layout_constraintEnd_toEndOf="@+id/viewport"
        app:layout_constraintStart_toStartOf="@+id/viewport"
        app:layout_constraintTop_toBottomOf="@+id/today" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/greenbutton"
        android:backgroundTint="@color/light_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="11dp"
        app:layout_constraintBottom_toBottomOf="@+id/viewport"
        app:layout_constraintEnd_toEndOf="@+id/viewport"
        app:layout_constraintStart_toStartOf="@+id/viewport"
        app:layout_constraintTop_toBottomOf="@+id/divider3"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/taskButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--<Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/brown_gold_button"
                android:backgroundTint="@null"
                android:fontFamily="sans-serif-light"
                android:text="Task 300"
                android:textAlignment="center"
                android:textSize="28sp"
                app:icon="@drawable/brown_gold_button"
                app:iconSize="20dp"
                app:iconTint="@color/blue"
                android:visibility="visible"/>
               -->
            <TextView
                android:id="@+id/no_task2"
                android:layout_width="296dp"
                android:layout_height="150dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:editable="false"
                android:gravity="center_horizontal|top"
                android:text="@string/you_have_no_tasks"
                android:textAlignment="viewStart"
                android:textAppearance="@style/you_have_no_tasks"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@+id/viewport"
                app:layout_constraintEnd_toStartOf="@+id/viewport"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/viewport"
                app:layout_constraintTop_toBottomOf="@+id/viewport" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
